// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Author Edit Panel should allow a new author to be created  1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -34,13 +34,14 @@
        </h4>
        <div
          class="rs-drawer-actions"
        >
          <button
-           aria-disabled="false"
-           class="rs-btn rs-btn-primary"
+           aria-disabled="true"
+           class="rs-btn rs-btn-primary rs-btn-disabled"
            data-testid="saveButton"
+           disabled=""
            type="submit"
          >
            create
            <span
              class="rs-ripple-pond"
@@ -94,14 +95,15 @@
                >
                  <input
                    aria-describedby="name-help-text"
                    aria-labelledby="name-control-label"
                    class="rs-input"
+                   disabled=""
                    id="name"
                    name="name"
                    type="text"
-                   value=""
+                   value="Clark Kent"
                  />
                </div>
              </div>
              <div
                class="rs-form-group"
@@ -119,10 +121,11 @@
                >
                  <input
                    aria-describedby="jobTitle-help-text"
                    aria-labelledby="jobTitle-control-label"
                    class="rs-input"
+                   disabled=""
                    id="jobTitle"
                    name="authors.panels.jobTitle"
                    type="text"
                    value=""
                  />
@@ -227,12 +230,13 @@
                  >
                    <div
                      class="css-12frltk"
                    >
                      <button
-                       aria-disabled="false"
-                       class="rs-btn-icon rs-btn-icon-placement-left rs-btn rs-btn-default"
+                       aria-disabled="true"
+                       class="rs-btn-icon rs-btn-icon-placement-left rs-btn rs-btn-default rs-btn-disabled"
+                       disabled=""
                        type="button"
                      >
                        <svg
                          fill="currentColor"
                          height="1em"
@@ -330,12 +334,13 @@
                    </div>
                    <div
                      class="css-17nfp2s"
                    >
                      <button
-                       aria-disabled="false"
-                       class="rs-btn-icon rs-btn-icon-placement-left rs-btn rs-btn-default"
+                       aria-disabled="true"
+                       class="rs-btn-icon rs-btn-icon-placement-left rs-btn rs-btn-default rs-btn-disabled"
+                       disabled=""
                        type="button"
                      >
                        <svg
                          fill="currentColor"
                          height="1em"
@@ -362,13 +367,14 @@
                        </span>
                      </button>
                    </div>
                  </div>
                  <button
-                   aria-disabled="false"
-                   class="rs-btn-icon rs-btn-icon-placement-left rs-btn rs-btn-default"
+                   aria-disabled="true"
+                   class="rs-btn-icon rs-btn-icon-placement-left rs-btn rs-btn-default rs-btn-disabled"
                    data-testid="addProperty"
+                   disabled=""
                    type="button"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
@@ -765,15 +771,18 @@
                      </button>
                    </div>
                  </div>
                </div>
                <div
-                 contenteditable="true"
+                 class="css-8hzfm6"
+               >
+                 blocks.richText.startWriting
+               </div>
+               <div
                  data-gramm="false"
                  data-slate-editor="true"
                  data-slate-node="value"
-                 role="textbox"
                  style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
                >
                  <p
                    data-slate-node="element"
                  >"
`;

exports[`Author Edit Panel should fill the link field 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -278,11 +278,11 @@
                              <input
                                class="rs-input"
                                name="title"
                                placeholder="authors.panels.title"
                                type="text"
-                               value=""
+                               value="abcd"
                              />
                            </div>
                            <div
                              class="rs-form-group"
                              role="group"
@@ -761,12 +761,17 @@
                              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
                            />
                          </svg>
                        </div>
                      </button>
+                   </div>
                  </div>
                </div>
+               <div
+                 class="css-8hzfm6"
+               >
+                 blocks.richText.startWriting
                </div>
                <div
                  contenteditable="true"
                  data-gramm="false"
                  data-slate-editor="true""
`;

exports[`Author Edit Panel should render 1`] = `
<DocumentFragment>
  <form
    class="css-1c13mle-Form e14dal3y0 rs-form rs-form-vertical rs-form-fluid"
  >
    <div
      class="rs-drawer-header"
    >
      <span
        aria-label="Close"
        class="rs-drawer-header-close rs-btn-close"
        role="button"
        title="Close"
      >
        <svg
          aria-hidden="true"
          aria-label="close"
          class="rs-icon"
          data-category="application"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M2.784 2.089l.069.058 5.146 5.147 5.146-5.147a.5.5 0 01.765.638l-.058.069L8.705 8l5.147 5.146a.5.5 0 01-.638.765l-.069-.058-5.146-5.147-5.146 5.147a.5.5 0 01-.765-.638l.058-.069L7.293 8 2.146 2.854a.5.5 0 01.638-.765z"
          />
        </svg>
      </span>
      <h4
        class="rs-drawer-title"
      >
        authors.panels.createAuthor
      </h4>
      <div
        class="rs-drawer-actions"
      >
        <button
          aria-disabled="false"
          class="rs-btn rs-btn-primary"
          data-testid="saveButton"
          type="submit"
        >
          create
          <span
            class="rs-ripple-pond"
          >
            <span
              class="rs-ripple"
            />
          </span>
        </button>
        <button
          class="rs-btn rs-btn-subtle"
          type="button"
        >
          authors.panels.close
          <span
            class="rs-ripple-pond"
          >
            <span
              class="rs-ripple"
            />
          </span>
        </button>
      </div>
    </div>
    <div
      class="rs-drawer-body"
    >
      <div
        class="rs-panel-group"
      >
        <div
          class="rs-panel"
        >
          <div
            class="rs-panel-body"
            role="region"
          >
            <div
              class="rs-form-group"
              role="group"
            >
              <label
                class="rs-form-control-label"
                for="name"
                id="name-control-label"
              >
                authors.panels.name*
              </label>
              <div
                class="rs-form-control rs-form-control-wrapper"
              >
                <input
                  aria-describedby="name-help-text"
                  aria-labelledby="name-control-label"
                  class="rs-input"
                  id="name"
                  name="name"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="rs-form-group"
              role="group"
            >
              <label
                class="rs-form-control-label"
                for="jobTitle"
                id="jobTitle-control-label"
              >
                authors.panels.jobTitle
              </label>
              <div
                class="rs-form-control rs-form-control-wrapper"
              >
                <input
                  aria-describedby="jobTitle-help-text"
                  aria-labelledby="jobTitle-control-label"
                  class="rs-input"
                  id="jobTitle"
                  name="authors.panels.jobTitle"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="rs-panel"
        >
          <div
            aria-expanded="false"
            class="rs-panel-header"
            tabindex="-1"
          >
            <span
              class="rs-panel-title"
              role="presentation"
            >
              <span
                class="collapsed"
              >
                authors.panels.image
              </span>
            </span>
          </div>
          <div
            class="rs-panel-body"
            role="region"
          >
            <div
              class="css-chr1eq rs-panel"
            >
              <div
                class="rs-panel-body rs-panel-body-fill"
                role="region"
              >
                <div
                  class="css-gv6g1x"
                >
                  <button
                    class="rs-btn-icon rs-btn-icon-placement-left rs-btn rs-btn-default rs-btn-sm"
                    type="button"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                      />
                    </svg>
                    <span
                      class="rs-ripple-pond"
                    >
                      <span
                        class="rs-ripple"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="authorLinks rs-panel"
        >
          <div
            aria-expanded="false"
            class="rs-panel-header"
            tabindex="-1"
          >
            <span
              class="rs-panel-title"
              role="presentation"
            >
              <span
                class="collapsed"
              >
                authors.panels.links
              </span>
            </span>
          </div>
          <div
            class="rs-panel-body"
            role="region"
          >
            <div>
              <div>
                <div
                  class="css-1c4wd4"
                >
                  <div
                    class="css-12frltk"
                  >
                    <button
                      aria-disabled="false"
                      class="rs-btn-icon rs-btn-icon-placement-left rs-btn rs-btn-default"
                      type="button"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                        />
                      </svg>
                      <span
                        class="rs-ripple-pond"
                      >
                        <span
                          class="rs-ripple"
                        />
                      </span>
                    </button>
                  </div>
                  <div
                    class="css-1ago99h rs-panel"
                  >
                    <div
                      class="rs-panel-body rs-panel-body-fill"
                      role="region"
                    >
                      <div
                        class="css-10odzlz"
                      >
                        <div
                          class="css-fngpsb-Controls e14dal3y1"
                        >
                          <div
                            class="rs-form-control rs-form-control-wrapper"
                          >
                            <input
                              class="rs-input"
                              name="title"
                              placeholder="authors.panels.title"
                              type="text"
                              value=""
                            />
                          </div>
                          <div
                            class="rs-form-group"
                            role="group"
                          >
                            <div
                              class="css-119kd5y-InputGroup e14dal3y2 rs-input-group rs-input-group-inside"
                            >
                              <span
                                class="rs-input-group-addon"
                              >
                                <svg
                                  fill="currentColor"
                                  height="1em"
                                  stroke="currentColor"
                                  stroke-width="0"
                                  viewBox="0 0 24 24"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M0 0h24v24H0z"
                                    fill="none"
                                  />
                                  <path
                                    d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
                                  />
                                </svg>
                              </span>
                              <div
                                class="rs-form-control rs-form-control-wrapper"
                              >
                                <input
                                  class="rs-input"
                                  name="link"
                                  placeholder="authors.panels.link:https//link.com"
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-17nfp2s"
                  >
                    <button
                      aria-disabled="false"
                      class="rs-btn-icon rs-btn-icon-placement-left rs-btn rs-btn-default"
                      type="button"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                        />
                      </svg>
                      <span
                        class="rs-ripple-pond"
                      >
                        <span
                          class="rs-ripple"
                        />
                      </span>
                    </button>
                  </div>
                </div>
                <button
                  aria-disabled="false"
                  class="rs-btn-icon rs-btn-icon-placement-left rs-btn rs-btn-default"
                  data-testid="addProperty"
                  type="button"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                    />
                  </svg>
                  <span
                    class="rs-ripple-pond"
                  >
                    <span
                      class="rs-ripple"
                    />
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="rs-panel"
        >
          <div
            aria-expanded="false"
            class="rs-panel-header"
            tabindex="-1"
          >
            <span
              class="rs-panel-title"
              role="presentation"
            >
              <span
                class="collapsed"
              >
                authors.panels.bioInformation
              </span>
            </span>
          </div>
          <div
            class="rs-panel-body"
            role="region"
          >
            <div
              class="richTextFrame"
            >
              <div
                class="css-u6g4ew"
              >
                <div
                  class="css-14noxf0"
                >
                  <div
                    class="css-18wuio6"
                  >
                    <button
                      class="css-109gd2z"
                      type="button"
                    >
                      <svg
                        class="bi bi-type-h1"
                        fill="currentColor"
                        height="1em"
                        viewBox="0 0 16 16"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8.637 13V3.669H7.379V7.62H2.758V3.67H1.5V13h1.258V8.728h4.62V13h1.259zm5.329 0V3.669h-1.244L10.5 5.316v1.265l2.16-1.565h.062V13h1.244z"
                        />
                      </svg>
                    </button>
                    <button
                      class="css-109gd2z"
                      type="button"
                    >
                      <svg
                        class="bi bi-type-h2"
                        fill="currentColor"
                        height="1em"
                        viewBox="0 0 16 16"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M7.638 13V3.669H6.38V7.62H1.759V3.67H.5V13h1.258V8.728h4.62V13h1.259zm3.022-6.733v-.048c0-.889.63-1.668 1.716-1.668.957 0 1.675.608 1.675 1.572 0 .855-.554 1.504-1.067 2.085l-3.513 3.999V13H15.5v-1.094h-4.245v-.075l2.481-2.844c.875-.998 1.586-1.784 1.586-2.953 0-1.463-1.155-2.556-2.919-2.556-1.941 0-2.966 1.326-2.966 2.74v.049h1.223z"
                        />
                      </svg>
                    </button>
                    <button
                      class="css-109gd2z"
                      type="button"
                    >
                      <svg
                        class="bi bi-type-h3"
                        fill="currentColor"
                        height="1em"
                        viewBox="0 0 16 16"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M7.637 13V3.669H6.379V7.62H1.758V3.67H.5V13h1.258V8.728h4.62V13h1.259zm3.625-4.272h1.018c1.142 0 1.935.67 1.949 1.674.013 1.005-.78 1.737-2.01 1.73-1.08-.007-1.853-.588-1.935-1.32H9.108c.069 1.327 1.224 2.386 3.083 2.386 1.935 0 3.343-1.155 3.309-2.789-.027-1.51-1.251-2.16-2.037-2.249v-.068c.704-.123 1.764-.91 1.723-2.229-.035-1.353-1.176-2.4-2.954-2.385-1.873.006-2.857 1.162-2.898 2.358h1.196c.062-.69.711-1.299 1.696-1.299.998 0 1.695.622 1.695 1.525.007.922-.718 1.592-1.695 1.592h-.964v1.074z"
                        />
                      </svg>
                    </button>
                    <div
                      aria-orientation="vertical"
                      class="css-e1iw3k rs-divider rs-divider-vertical"
                      role="separator"
                    />
                    <button
                      class="css-109gd2z"
                      type="button"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5zm0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5zm0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5zM7 19h14v-2H7v2zm0-6h14v-2H7v2zm0-8v2h14V5H7z"
                        />
                      </svg>
                    </button>
                    <button
                      class="css-109gd2z"
                      type="button"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M2 17h2v.5H3v1h1v.5H2v1h3v-4H2v1zm1-9h1V4H2v1h1v3zm-1 3h1.8L2 13.1v.9h3v-1H3.2L5 10.9V10H2v1zm5-6v2h14V5H7zm0 14h14v-2H7v2zm0-6h14v-2H7v2z"
                        />
                      </svg>
                    </button>
                    <div
                      aria-orientation="vertical"
                      class="css-e1iw3k rs-divider rs-divider-vertical"
                      role="separator"
                    />
                    <button
                      class="css-109gd2z"
                      type="button"
                    >
                      <div
                        class="css-1ttmkdf"
                      >
                        <svg
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M0 0h24v24H0V0z"
                            fill="none"
                          />
                          <path
                            d="M10 10.02h5V21h-5zM17 21h3c1.1 0 2-.9 2-2v-9h-5v11zm3-18H5c-1.1 0-2 .9-2 2v3h19V5c0-1.1-.9-2-2-2zM3 19c0 1.1.9 2 2 2h3V10H3v9z"
                          />
                        </svg>
                      </div>
                    </button>
                    <div
                      aria-orientation="vertical"
                      class="css-e1iw3k rs-divider rs-divider-vertical"
                      role="separator"
                    />
                    <button
                      class="css-109gd2z"
                      type="button"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M15.6 10.79c.97-.67 1.65-1.77 1.65-2.79 0-2.26-1.75-4-4-4H7v14h7.04c2.09 0 3.71-1.7 3.71-3.79 0-1.52-.86-2.82-2.15-3.42zM10 6.5h3c.83 0 1.5.67 1.5 1.5s-.67 1.5-1.5 1.5h-3v-3zm3.5 9H10v-3h3.5c.83 0 1.5.67 1.5 1.5s-.67 1.5-1.5 1.5z"
                        />
                      </svg>
                    </button>
                    <button
                      class="css-109gd2z"
                      type="button"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M10 4v3h2.21l-3.42 8H6v3h8v-3h-2.21l3.42-8H18V4z"
                        />
                      </svg>
                    </button>
                    <button
                      class="css-109gd2z"
                      type="button"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M12 17c3.31 0 6-2.69 6-6V3h-2.5v8c0 1.93-1.57 3.5-3.5 3.5S8.5 12.93 8.5 11V3H6v8c0 3.31 2.69 6 6 6zm-7 2v2h14v-2H5z"
                        />
                      </svg>
                    </button>
                    <button
                      class="css-109gd2z"
                      type="button"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M10 19h4v-3h-4v3zM5 4v3h5v3h4V7h5V4H5zM3 14h18v-2H3v2z"
                        />
                      </svg>
                    </button>
                    <button
                      class="css-109gd2z"
                      type="button"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M22 7h-2v1h3v1h-4V7c0-.55.45-1 1-1h2V5h-3V4h3c.55 0 1 .45 1 1v1c0 .55-.45 1-1 1zM5.88 20h2.66l3.4-5.42h.12l3.4 5.42h2.66l-4.65-7.27L17.81 6h-2.68l-3.07 4.99h-.12L8.85 6H6.19l4.32 6.73L5.88 20z"
                        />
                      </svg>
                    </button>
                    <button
                      class="css-109gd2z"
                      type="button"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M22 18h-2v1h3v1h-4v-2c0-.55.45-1 1-1h2v-1h-3v-1h3c.55 0 1 .45 1 1v1c0 .55-.45 1-1 1zM5.88 18h2.66l3.4-5.42h.12l3.4 5.42h2.66l-4.65-7.27L17.81 4h-2.68l-3.07 4.99h-.12L8.85 4H6.19l4.32 6.73L5.88 18z"
                        />
                      </svg>
                    </button>
                    <div
                      aria-orientation="vertical"
                      class="css-e1iw3k rs-divider rs-divider-vertical"
                      role="separator"
                    />
                    <button
                      class="css-109gd2z"
                      type="button"
                    >
                      <div
                        class="css-1ttmkdf"
                      >
                        <svg
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M0 0h24v24H0z"
                            fill="none"
                          />
                          <path
                            d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
                          />
                        </svg>
                      </div>
                    </button>
                    <div
                      aria-orientation="vertical"
                      class="css-e1iw3k rs-divider rs-divider-vertical"
                      role="separator"
                    />
                    <button
                      class="css-109gd2z"
                      type="button"
                    >
                      <div
                        class="css-1ttmkdf"
                      >
                        <svg
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M0 0h24v24H0z"
                            fill="none"
                          />
                          <path
                            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
                          />
                        </svg>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
              <div
                contenteditable="true"
                data-gramm="false"
                data-slate-editor="true"
                data-slate-node="value"
                role="textbox"
                style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
              >
                <p
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-leaf="true"
                    >
                      <span
                        data-slate-length="0"
                        data-slate-zero-width="n"
                      >
                        ﻿
                        <br />
                      </span>
                    </span>
                  </span>
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`Author Edit Panel should render with ID 1`] = `
<DocumentFragment>
  <form
    class="css-1c13mle-Form e14dal3y0 rs-form rs-form-vertical rs-form-fluid"
  >
    <div
      class="rs-drawer-header"
    >
      <span
        aria-label="Close"
        class="rs-drawer-header-close rs-btn-close"
        role="button"
        title="Close"
      >
        <svg
          aria-hidden="true"
          aria-label="close"
          class="rs-icon"
          data-category="application"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M2.784 2.089l.069.058 5.146 5.147 5.146-5.147a.5.5 0 01.765.638l-.058.069L8.705 8l5.147 5.146a.5.5 0 01-.638.765l-.069-.058-5.146-5.147-5.146 5.147a.5.5 0 01-.765-.638l.058-.069L7.293 8 2.146 2.854a.5.5 0 01.638-.765z"
          />
        </svg>
      </span>
      <h4
        class="rs-drawer-title"
      >
        authors.panels.editAuthor
      </h4>
      <div
        class="rs-drawer-actions"
      >
        <button
          aria-disabled="false"
          class="rs-btn rs-btn-primary"
          data-testid="saveButton"
          type="submit"
        >
          save
          <span
            class="rs-ripple-pond"
          >
            <span
              class="rs-ripple"
            />
          </span>
        </button>
        <button
          class="rs-btn rs-btn-subtle"
          type="button"
        >
          authors.panels.close
          <span
            class="rs-ripple-pond"
          >
            <span
              class="rs-ripple"
            />
          </span>
        </button>
      </div>
    </div>
    <div
      class="rs-drawer-body"
    >
      <div
        class="rs-panel-group"
      >
        <div
          class="rs-panel"
        >
          <div
            class="rs-panel-body"
            role="region"
          >
            <div
              class="rs-form-group"
              role="group"
            >
              <label
                class="rs-form-control-label"
                for="name"
                id="name-control-label"
              >
                authors.panels.name*
              </label>
              <div
                class="rs-form-control rs-form-control-wrapper"
              >
                <input
                  aria-describedby="name-help-text"
                  aria-labelledby="name-control-label"
                  class="rs-input"
                  id="name"
                  name="name"
                  type="text"
                  value="Douglas Cole"
                />
              </div>
            </div>
            <div
              class="rs-form-group"
              role="group"
            >
              <label
                class="rs-form-control-label"
                for="jobTitle"
                id="jobTitle-control-label"
              >
                authors.panels.jobTitle
              </label>
              <div
                class="rs-form-control rs-form-control-wrapper"
              >
                <input
                  aria-describedby="jobTitle-help-text"
                  aria-labelledby="jobTitle-control-label"
                  class="rs-input"
                  id="jobTitle"
                  name="authors.panels.jobTitle"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="rs-panel"
        >
          <div
            aria-expanded="false"
            class="rs-panel-header"
            tabindex="-1"
          >
            <span
              class="rs-panel-title"
              role="presentation"
            >
              <span
                class="collapsed"
              >
                authors.panels.image
              </span>
            </span>
          </div>
          <div
            class="rs-panel-body"
            role="region"
          >
            <div
              class="css-chr1eq rs-panel"
            >
              <div
                class="rs-panel-body rs-panel-body-fill"
                role="region"
              >
                <div
                  class="css-gv6g1x"
                >
                  <button
                    class="rs-btn-icon rs-btn-icon-placement-left rs-btn rs-btn-default rs-btn-sm"
                    type="button"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                      />
                    </svg>
                    <span
                      class="rs-ripple-pond"
                    >
                      <span
                        class="rs-ripple"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="authorLinks rs-panel"
        >
          <div
            aria-expanded="false"
            class="rs-panel-header"
            tabindex="-1"
          >
            <span
              class="rs-panel-title"
              role="presentation"
            >
              <span
                class="collapsed"
              >
                authors.panels.links
              </span>
            </span>
          </div>
          <div
            class="rs-panel-body"
            role="region"
          >
            <div>
              <div>
                <button
                  aria-disabled="false"
                  class="rs-btn-icon rs-btn-icon-placement-left rs-btn rs-btn-default"
                  data-testid="addProperty"
                  type="button"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                    />
                  </svg>
                  <span
                    class="rs-ripple-pond"
                  >
                    <span
                      class="rs-ripple"
                    />
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="rs-panel"
        >
          <div
            aria-expanded="false"
            class="rs-panel-header"
            tabindex="-1"
          >
            <span
              class="rs-panel-title"
              role="presentation"
            >
              <span
                class="collapsed"
              >
                authors.panels.bioInformation
              </span>
            </span>
          </div>
          <div
            class="rs-panel-body"
            role="region"
          >
            <div
              class="richTextFrame"
            >
              <div
                class="css-u6g4ew"
              >
                <div
                  class="css-14noxf0"
                >
                  <div
                    class="css-18wuio6"
                  >
                    <button
                      class="css-109gd2z"
                      type="button"
                    >
                      <svg
                        class="bi bi-type-h1"
                        fill="currentColor"
                        height="1em"
                        viewBox="0 0 16 16"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8.637 13V3.669H7.379V7.62H2.758V3.67H1.5V13h1.258V8.728h4.62V13h1.259zm5.329 0V3.669h-1.244L10.5 5.316v1.265l2.16-1.565h.062V13h1.244z"
                        />
                      </svg>
                    </button>
                    <button
                      class="css-109gd2z"
                      type="button"
                    >
                      <svg
                        class="bi bi-type-h2"
                        fill="currentColor"
                        height="1em"
                        viewBox="0 0 16 16"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M7.638 13V3.669H6.38V7.62H1.759V3.67H.5V13h1.258V8.728h4.62V13h1.259zm3.022-6.733v-.048c0-.889.63-1.668 1.716-1.668.957 0 1.675.608 1.675 1.572 0 .855-.554 1.504-1.067 2.085l-3.513 3.999V13H15.5v-1.094h-4.245v-.075l2.481-2.844c.875-.998 1.586-1.784 1.586-2.953 0-1.463-1.155-2.556-2.919-2.556-1.941 0-2.966 1.326-2.966 2.74v.049h1.223z"
                        />
                      </svg>
                    </button>
                    <button
                      class="css-109gd2z"
                      type="button"
                    >
                      <svg
                        class="bi bi-type-h3"
                        fill="currentColor"
                        height="1em"
                        viewBox="0 0 16 16"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M7.637 13V3.669H6.379V7.62H1.758V3.67H.5V13h1.258V8.728h4.62V13h1.259zm3.625-4.272h1.018c1.142 0 1.935.67 1.949 1.674.013 1.005-.78 1.737-2.01 1.73-1.08-.007-1.853-.588-1.935-1.32H9.108c.069 1.327 1.224 2.386 3.083 2.386 1.935 0 3.343-1.155 3.309-2.789-.027-1.51-1.251-2.16-2.037-2.249v-.068c.704-.123 1.764-.91 1.723-2.229-.035-1.353-1.176-2.4-2.954-2.385-1.873.006-2.857 1.162-2.898 2.358h1.196c.062-.69.711-1.299 1.696-1.299.998 0 1.695.622 1.695 1.525.007.922-.718 1.592-1.695 1.592h-.964v1.074z"
                        />
                      </svg>
                    </button>
                    <div
                      aria-orientation="vertical"
                      class="css-e1iw3k rs-divider rs-divider-vertical"
                      role="separator"
                    />
                    <button
                      class="css-109gd2z"
                      type="button"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5zm0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5zm0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5zM7 19h14v-2H7v2zm0-6h14v-2H7v2zm0-8v2h14V5H7z"
                        />
                      </svg>
                    </button>
                    <button
                      class="css-109gd2z"
                      type="button"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M2 17h2v.5H3v1h1v.5H2v1h3v-4H2v1zm1-9h1V4H2v1h1v3zm-1 3h1.8L2 13.1v.9h3v-1H3.2L5 10.9V10H2v1zm5-6v2h14V5H7zm0 14h14v-2H7v2zm0-6h14v-2H7v2z"
                        />
                      </svg>
                    </button>
                    <div
                      aria-orientation="vertical"
                      class="css-e1iw3k rs-divider rs-divider-vertical"
                      role="separator"
                    />
                    <button
                      class="css-109gd2z"
                      type="button"
                    >
                      <div
                        class="css-1ttmkdf"
                      >
                        <svg
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M0 0h24v24H0V0z"
                            fill="none"
                          />
                          <path
                            d="M10 10.02h5V21h-5zM17 21h3c1.1 0 2-.9 2-2v-9h-5v11zm3-18H5c-1.1 0-2 .9-2 2v3h19V5c0-1.1-.9-2-2-2zM3 19c0 1.1.9 2 2 2h3V10H3v9z"
                          />
                        </svg>
                      </div>
                    </button>
                    <div
                      aria-orientation="vertical"
                      class="css-e1iw3k rs-divider rs-divider-vertical"
                      role="separator"
                    />
                    <button
                      class="css-109gd2z"
                      type="button"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M15.6 10.79c.97-.67 1.65-1.77 1.65-2.79 0-2.26-1.75-4-4-4H7v14h7.04c2.09 0 3.71-1.7 3.71-3.79 0-1.52-.86-2.82-2.15-3.42zM10 6.5h3c.83 0 1.5.67 1.5 1.5s-.67 1.5-1.5 1.5h-3v-3zm3.5 9H10v-3h3.5c.83 0 1.5.67 1.5 1.5s-.67 1.5-1.5 1.5z"
                        />
                      </svg>
                    </button>
                    <button
                      class="css-109gd2z"
                      type="button"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M10 4v3h2.21l-3.42 8H6v3h8v-3h-2.21l3.42-8H18V4z"
                        />
                      </svg>
                    </button>
                    <button
                      class="css-109gd2z"
                      type="button"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M12 17c3.31 0 6-2.69 6-6V3h-2.5v8c0 1.93-1.57 3.5-3.5 3.5S8.5 12.93 8.5 11V3H6v8c0 3.31 2.69 6 6 6zm-7 2v2h14v-2H5z"
                        />
                      </svg>
                    </button>
                    <button
                      class="css-109gd2z"
                      type="button"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M10 19h4v-3h-4v3zM5 4v3h5v3h4V7h5V4H5zM3 14h18v-2H3v2z"
                        />
                      </svg>
                    </button>
                    <button
                      class="css-109gd2z"
                      type="button"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M22 7h-2v1h3v1h-4V7c0-.55.45-1 1-1h2V5h-3V4h3c.55 0 1 .45 1 1v1c0 .55-.45 1-1 1zM5.88 20h2.66l3.4-5.42h.12l3.4 5.42h2.66l-4.65-7.27L17.81 6h-2.68l-3.07 4.99h-.12L8.85 6H6.19l4.32 6.73L5.88 20z"
                        />
                      </svg>
                    </button>
                    <button
                      class="css-109gd2z"
                      type="button"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M22 18h-2v1h3v1h-4v-2c0-.55.45-1 1-1h2v-1h-3v-1h3c.55 0 1 .45 1 1v1c0 .55-.45 1-1 1zM5.88 18h2.66l3.4-5.42h.12l3.4 5.42h2.66l-4.65-7.27L17.81 4h-2.68l-3.07 4.99h-.12L8.85 4H6.19l4.32 6.73L5.88 18z"
                        />
                      </svg>
                    </button>
                    <div
                      aria-orientation="vertical"
                      class="css-e1iw3k rs-divider rs-divider-vertical"
                      role="separator"
                    />
                    <button
                      class="css-109gd2z"
                      type="button"
                    >
                      <div
                        class="css-1ttmkdf"
                      >
                        <svg
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M0 0h24v24H0z"
                            fill="none"
                          />
                          <path
                            d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
                          />
                        </svg>
                      </div>
                    </button>
                    <div
                      aria-orientation="vertical"
                      class="css-e1iw3k rs-divider rs-divider-vertical"
                      role="separator"
                    />
                    <button
                      class="css-109gd2z"
                      type="button"
                    >
                      <div
                        class="css-1ttmkdf"
                      >
                        <svg
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M0 0h24v24H0z"
                            fill="none"
                          />
                          <path
                            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
                          />
                        </svg>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="css-8hzfm6"
              >
                blocks.richText.startWriting
              </div>
              <div
                contenteditable="true"
                data-gramm="false"
                data-slate-editor="true"
                data-slate-node="value"
                role="textbox"
                style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
              >
                <p
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-leaf="true"
                    >
                      <span
                        data-slate-length="0"
                        data-slate-zero-width="n"
                      >
                        ﻿
                        <br />
                      </span>
                    </span>
                  </span>
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`Author Edit Panel will not render without correct permission 1`] = `
<DocumentFragment>
  <div
    class="rs-message rs-message-error rs-message-show rs-message-has-title rs-message-has-icon"
    role="alert"
  >
    <div
      class="rs-message-container"
    >
      <div
        class="rs-message-icon-wrapper"
      >
        <svg
          aria-hidden="true"
          aria-label="close circle"
          class="rs-icon"
          data-category="legacy"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
        >
          <path
            d="M23.936 20.711c0-.363-.133-.672-.393-.937L19.769 16l3.771-3.769a1.28 1.28 0 00.393-.937c0-.377-.133-.695-.393-.958l-1.877-1.874a1.312 1.312 0 00-.962-.395c-.361 0-.67.133-.937.395l-3.765 3.769L12.23 8.46a1.293 1.293 0 00-.939-.395c-.375 0-.697.133-.958.395l-1.874 1.874a1.312 1.312 0 00-.395.958c0 .361.133.67.395.937L12.23 16l-3.771 3.771a1.278 1.278 0 00-.395.937c0 .375.133.695.395.96l1.874 1.874c.263.263.583.393.958.393.361 0 .672-.13.937-.393l3.771-3.771 3.769 3.771c.265.263.576.393.937.393.377 0 .697-.13.962-.393l1.877-1.874c.258-.265.391-.587.391-.958zM32 16c0 2.903-.715 5.579-2.144 8.03a15.931 15.931 0 01-5.822 5.826c-2.457 1.429-5.131 2.142-8.034 2.142s-5.579-.711-8.034-2.142a15.924 15.924 0 01-5.822-5.826C.715 21.58 0 18.903 0 16s.715-5.579 2.146-8.032 3.369-4.393 5.822-5.822S13.097.002 16 .002s5.577.715 8.034 2.146a15.928 15.928 0 015.822 5.822C31.282 10.42 32 13.097 32 16z"
          />
        </svg>
      </div>
      <div
        class="rs-message-content"
      >
        <div
          class="rs-message-header"
        >
          permissions.noAccess
        </div>
        <div
          class="rs-message-body"
        >
          permissions.contactAdmin
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
